<resources>
    <string name="app_name">FFC</string>
    <string name="ffc">FFC</string>
    <string name="ago_in_arabic">Since</string>
    <string name="min_ago">Minutes ago</string>
    <string name="hours_ago">Hours ago</string>
    <string name="days_ago">Days ago</string>
    <string name="just_now">just now</string>
    <string name="a_min_ago">A minute ago</string>
    <string name="yesterday">yesterday</string>
    <string name="hour_ago">An hour ago</string>
    <string name="work_hours">Work Hours</string>
    <string name="birthdate">Birthdate</string>
    <string name="not_valid">Not valid</string>
    <string name="required">Required</string>
    <string name="find_track_and_chat_clients_for_the_developmnet_process">Find, Track and \n chat clients for the \n developmnet process</string>
    <string name="sam_will_send_one_time_sms_message_to_verify_your_phone_number">Sam will send one time SMS \n message to verify your phone \n number</string>
    <string name="skip">Skip</string>
    <string name="login_by_e_mail">Login by e-mail</string>
    <string name="login_by_phone_number">Login by phone number</string>
    <string name="or_connect_with_social_account">Or connect with social account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="done">Done</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="address">Address</string>
    <string name="full_name">Full Name</string>
    <string name="birthday">Birthday</string>
    <string name="let_s_reset_your_password">Let’s reset your \n password</string>
    <string name="reset">Reset</string>
    <string name="bookmark_your_favorites">Bookmark Your Favorites</string>
    <string name="appointments">Appointments</string>
    <string name="featured_categories">Featured Categories</string>
    <string name="home">Home</string>
    <string name="change_language">Change Language</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="my_account">My Account</string>
    <string name="my_wallet">My Wallet</string>
    <string name="send_feedbacks">Send Feedbacks</string>
    <string name="logout">Log Out</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="special_offers">Special Offers</string>
    <string name="the_salon">The salon</string>
    <string name="details">Details</string>
    <string name="book_now">Book now</string>
    <string name="all_for">All for</string>
    <string name="price_starting_from">Price starting from</string>
    <string name="at_the_salon">At the salon</string>
    <string name="at_the_home">At the home</string>
    <string name="favorite">Favorite</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="status">Status</string>
    <string name="service_book">Service Book</string>
    <string name="deposit_paid">Deposit Paid</string>
    <string name="reschedule">Reschedule</string>
    <string name="cancel">Cancel</string>
    <string name="view_map">View Map</string>
    <string name="call">Call</string>
    <string name="hour">Hour</string>
    <string name="map">Map</string>
    <string name="about">About</string>
    <string name="offers">Offers</string>
    <string name="services">Services</string>
    <string name="product">Product</string>
    <string name="products">Products</string>
    <string name="service">Service</string>
    <string name="salon_name">Salon name</string>
    <string name="location">Location</string>
    <string name="salon_number">Salon number</string>
    <string name="follow_us">Follow us</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_your_feedback_let_us_know_how_you_like">Send your feedback, let us know how you like</string>
    <string name="personal_info">Personal Info</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="no_notifications">No notification</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="notifications">Notifications</string>
    <string name="delete_this_notification">Delete this notification !!</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="choose_agent">Choose agent</string>
    <string name="booking">Booking</string>
    <string name="list_your_business">List your business</string>
    <string name="submit">Submit</string>
    <string name="your_salon_name">Your salon name</string>
    <string name="choose_your_preferred_language">Choose your preferred language</string>
    <string name="use_my_current">Use my current</string>
    <string name="continue_">Continue</string>
    <string name="complete">Complete</string>
    <string name="summary">Summary</string>
    <string name="travel_fee">Travel fee</string>
    <string name="aed">AED</string>
    <string name="add_promo_code">Add promo code</string>
    <string name="optional">Optional</string>
    <string name="enter_promo_code">Enter promo code</string>
    <string name="apply">Apply</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="success">Success</string>
    <string name="thank_you_for_choosing_our_products">Thank you for choosing \n our products!</string>
    <string name="go_to_home">Go To Home</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="verification">Verification</string>
    <string name="enter_4_digit_code">Enter 4 digit code</string>
    <string name="please_insert_sms_code">Please insert sent code</string>
    <string name="resend_a_new_code">Resend a new code</string>
    <string name="didn_t_receive_any_code">Didn\'t receive any code ?</string>
    <string name="request">Request</string>
    <string name="passwordsnotmatches">Passwords not matched</string>
    <string name="passwordchanged">Password has been Changed</string>
    <string name="price_range">Price Range</string>
    <string name="rating">Rating</string>
    <string name="min_order">Min Order</string>
    <string name="more">More</string>
    <string name="min">Min</string>
    <string name="choose_city">Choose City</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_Delete_this_Item">Confirm Delete this Item</string>
    <string name="welcome">Welcome</string>
    <string name="rate">Rate</string>
    <string name="post">Post</string>
    <string name="write">Write</string>
    <string name="review">Review</string>
    <string name="write_a_review">Write a review</string>
    <string name="appointment_must_be_selected_first">Appointment must be selected first</string>
    <string name="info">Info</string>
    <string name="You_need_to_login_first">You need to login first</string>
    <string name="question_sign">\?</string>
    <string name="no_favorites_added_yet">No favorites added yet!</string>
    <string name="no_categories">No categories</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="no_services">No services</string>
    <string name="no_appointments_available">No appointments available</string>
    <string name="no_offers">No Offers</string>
    <string name="no_products">No products</string>
    <string name="filter">Filter</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="create_account">Create account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="user_name">User name</string>
    <string name="please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email">Please enter your email address. You will receive a link to create a new password via email.</string>
    <string name="next">Next</string>
    <string name="categories">Categories</string>
    <string name="sort">Sort</string>
    <string name="order_number">Order number</string>
    <string name="track_order">Track Order</string>
    <string name="explore_by_category">Explore by category</string>
    <string name="top_sale">Top sale</string>
    <string name="history">History</string>
    <string name="search_for_products">Search for products</string>
    <string name="personal_details">Personal details</string>
    <string name="my_orders">My orders</string>
    <string name="wallet">Wallet</string>
    <string name="shipping_address">Shipping address</string>
    <string name="settings">Settings</string>
    <string name="my_favorites">My favorites</string>
    <string name="profile">Profile</string>
    <string name="city">City</string>
    <string name="save_changes">Save changes</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="enter_you_otp_code">Enter you OTP code</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="payment_method">Payment Method</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="payment_way">Payment Way</string>
    <string name="shipping_fees">Shipping fees</string>
    <string name="street">Street</string>
    <string name="house_number">House number</string>
    <string name="notes">Notes</string>
    <string name="set_a_delivery_date">Set a Delivery date</string>
    <string name="today">Today</string>
    <string name="online_payment">Online Payment</string>
    <string name="cash">Cash</string>
    <string name="from_wallet">From Wallet</string>
    <string name="your_order_is_complete">Your Order is Complete</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="language">Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="share_app">Share App</string>
    <string name="promo_code">Promo code</string>
    <string name="currency_code">KWD</string>
    <string name="reviews">reviews</string>
    <string name="description">Description</string>
    <string name="choose">Choose</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="ok">Ok</string>
    <string name="category_id_is_empty">Category id is empty</string>
    <string name="add_more">Add More</string>
    <string name="This_product_not_has_share_link">This product not has share link</string>
    <string name="empty_cart_message">Opss... Your Cart is Empty</string>
    <string name="shopping_now">Shopping Now</string>
    <string name="governorate">Governorate</string>
</resources>