<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.authentication.LoginByEmailActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:background="@drawable/ic_auth_bg"
                >
                <ImageView
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_white"
                    />
            </FrameLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginVertical="@dimen/_16sdp"
                />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailInput"
                        style="@style/InputTextStyle"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_mail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordInput"
                        style="@style/InputTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:hint="@string/password"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/forgetPasswordTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:padding="@dimen/_5sdp"
                        android:text='@{@string/forget_password+@string/question_sign}'
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/_9sdp"
                        tools:text="@string/forget_password" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/done"
                        style="@style/ButtonContainedSecondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/done" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/don_t_have_an_account"
                            android:textColor="@color/text_color_grey"
                            android:textSize="@dimen/_11sdp"
                            tools:text="@string/don_t_have_an_account" />

                        <TextView
                            android:id="@+id/signUpTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/create_account"
                            android:textColor="@color/secondary"
                            android:textSize="@dimen/_11sdp"
                            android:textStyle="bold" />
                    </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/skip"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/continue_as_a_guest"
                android:background="@color/light_primary"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:gravity="center"
                />

        </LinearLayout>
    </ScrollView>
</layout>